# sealdex

./: .dockerignore  .env.example  .gitignore  .mcp.json  AGENTS.md  Anchor.toml  CLAUDE.md  DEPLOY.md  Dockerfile  README.md  fly.toml  package.json  tsconfig.json
.github/workflows/: ci.yml
agents/auctioneer/: index.ts  package.json
agents/bidder/: .env.example  README.md  index.ts  lib.test.ts  lib.ts  llm.test.ts  llm.ts  package.json  prompts.ts  tsconfig.json
agents/escrow/: index.ts  package.json  tsconfig.json
docs/: PRODUCTION-READINESS.md  fly-deploy.md  threat-model.md
frontend/: next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
frontend/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
frontend/components/: Chrome.tsx  WalletConnectButton.tsx
frontend/lib/: agents-stats.test.ts  agents-stats.ts  auth-env.ts  auth.test.ts  auth.ts  cred-crypto.test.ts  cred-crypto.ts  explorer.ts  history.test.ts  history.ts  lot-cache.ts  onchain.ts  registry.ts  require-session.ts  smoke-iter22.ts  smoke-iter23.ts  spawn-create.test.ts  spawn-create.ts  spawn-form.test.ts  spawn-form.ts  spawn-format.test.ts  spawn-format.ts  spawn-process.test.ts  spawn-process.ts  spawn-store.ts  (+6 more)
mcp-server/: package.json  tsconfig.json
programs/sealdex-auction/: Cargo.toml
programs/sealdex-auction/src/: lib.rs
scripts/: cycle.sh  entrypoint.sh  seed-inventory.json  settle.ts  smoke-iter24.sh
tests/: sealdex-auction.ts  sealdex-security.ts
video/: DESIGN.md  index.html  meta.json  script.md
(+44 files in other folders)
