[package]
name = "sealdex-auction"
version = "0.1.0"
description = "Sealdex sealed-bid auction program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sealdex_auction"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
custom-heap = []
custom-panic = []
anchor-debug = []

[dependencies]
anchor-lang = { version = "=0.32.1", features = ["init-if-needed"] }
ephemeral-rollups-sdk = { version = "=0.11.0", features = ["anchor", "access-control"] }
